# Claude-Usage-TUI

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Design_refinement.md  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-13-claude-usage-tui.md  2026-03-14-btop-visual-alignment.md
docs/superpowers/specs/: 2026-03-13-claude-usage-tui-design.md
src/: app.rs  browser.rs  config.rs  main.rs
src/api/: mod.rs  types.rs
src/auth/: cookie.rs  login.rs  mod.rs  oauth.rs
src/ui/: mod.rs  session.rs  spend.rs  status_bar.rs  theme.rs  weekly.rs
